--- a/integrations/cdn/card.html
+++ b/integrations/cdn/card.html
@@ -11,92 +11,57 @@
 
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Airwallex Checkout Playground</title>
-    <!-- 
+
+<head lang="en">
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Airwallex Checkout Playground</title>
+  <!-- 
      STEP #1: Import airwallex-payment-elements bundle 
                - You MUST replace the bundle version to the latest NPM version
                  in order to import the package properly!
    -->
-    <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
-  </head>
+  <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
+</head>
 
-  <body>
-    <h1>Card integration</h1>
-    <!-- Styling example below: Setting container to display nothing when element is not mounted -->
-    <div id="card-container" style="display: none">
-      <!-- STEP #3a: Add an empty container for the card element to be injected into -->
-      <div id="card"></div>
-      <p id="input-error" style="color: red"></p>
-      <!-- STEP #3b: Add a submit button to trigger the payment request -->
-      <button id="submit" disabled="true">Submit</button>
-    </div>
-    <!-- Example response message containers -->
-    <p id="error"></p>
-    <p id="success">Payment successful!</p>
-    <script>
-      try {
-        // STEP #2: Initialize the Airwallex global context for event communication
-        Airwallex.init({
-          env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
-          origin: window.location.origin, // Setup your event target to receive the browser events message
-          fonts: [
-            // Customizes the font for the payment elements
-            {
-              src:
-                'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
-              family: 'AxLLCircular',
-              weight: 400,
-            },
-          ],
-        });
-
-        // STEP #4: Create 'card' element
-        const card = Airwallex.createElement('card');
-
-        // STEP #5: Mount card element
-        card.mount('card');
-      } catch (error) {
-        document.getElementById('error').style.display = 'block'; // Example: show error
-        document.getElementById('error').innerHTML = error.message; // Example: set error message
-        console.error('There was an error', error);
-      }
-
-      // STEP #6a: Add a button handler to trigger the payment request
-      document.getElementById('submit').addEventListener('click', () => {
-        document.getElementById('error').style.display = 'none'; // Example: hide error
-        document.getElementById('submit').innerHTML = 'Processing...'; // Example: set submitting state
-        document.getElementById('submit').disabled = true; // Example: disable button to prevent double submission
-
-        Airwallex.confirmPaymentIntent({
-          element: Airwallex.getElement('card'),
-          id: 'replace-with-your-intent-id',
-          client_secret: 'replace-with-your-client-secret',
-        })
-          .then((response) => {
-            // STEP #6b: Listen to the request response
-            /* Handle confirm response */
-            document.getElementById('success').style.display = 'block'; // Example: show success message
-            document.getElementById('submit').innerHTML = 'Submit'; // Example: reset button state
-            document.getElementById('submit').disabled = false; // Example: reset button state
-            window.alert(JSON.stringify(response));
-          })
-          .catch((response) => {
-            // STEP #6c: Listen to the error response
-            /* Handle error response */
-            document.getElementById('error').style.display = 'block'; // Example: show error message
-            document.getElementById('error').innerHTML = response.message; // Example: fill in error message
-            document.getElementById('submit').innerHTML = 'Submit'; // Example: reset button state
-            document.getElementById('submit').disabled = false; // Example: reset button state
-            console.error(`There was an error, ${JSON.stringify(response)}`);
-          });
+<body>
+  <h1>Card integration</h1>
+  <!-- Styling example below: Setting container to display nothing when element is not mounted -->
+  <div id="card-container" style="display: none">
+    <!-- STEP #3a: Add an empty container for the card element to be injected into -->
+    <div id="card"></div>
+    <p id="input-error" style="color: red"></p>
+    <!-- STEP #3b: Add a submit button to trigger the payment request -->
+    <button id="submit" disabled="true">Submit</button>
+  </div>
+  <!-- Example response message containers -->
+  <p id="error"></p>
+  <p id="success">Payment successful!</p>
+  <script>
+    try {
+      // STEP #2: Initialize the Airwallex global context for event communication
+      Airwallex.init({
+        env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
+        origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
+          },
+        ],
       });
 
+      // STEP #4: Create 'card' element
+      const card = Airwallex.createElement('card');
+
+      // STEP #5: Mount card element
+      const domElement = card.mount('card');
       // STEP #7: Add an event listener to ensure the element is mounted
-      window.addEventListener('onReady', (event) => {
+      domElement.addEventListener('onReady', (event) => {
         /*
        ... Handle event
         */
@@ -106,13 +71,13 @@
       });
 
       // STEP #8: Add an event listener to validate element input
-      window.addEventListener('onChange', (event) => {
+      domElement.addEventListener('onChange', (event) => {
         const { complete } = event.detail;
         document.getElementById('submit').disabled = !complete; // Example: only enable button when element input is completed
       });
 
       // STEP #9: Add an event listener to get input focus status
-      window.addEventListener('onFocus', (event) => {
+      domElement.addEventListener('onFocus', (event) => {
         // Customize your input focus style by listen onFocus event
         const element = document.getElementById('input-error');
         if (element) {
@@ -121,7 +86,7 @@
       });
 
       // STEP #10: Add an event listener to show input error message when finish typing
-      window.addEventListener('onBlur', (event) => {
+      domElement.addEventListener('onBlur', (event) => {
         const { complete } = event.detail;
         const { error } = event.detail;
         const element = document.getElementById('input-error');
@@ -131,25 +96,63 @@
       });
 
       // STEP #11: Add an event listener to handle errors
-      window.addEventListener('onError', (event) => {
+      domElement.addEventListener('onError', (event) => {
         const { error } = event.detail;
         document.getElementById('error').style.display = 'block'; // Example: show error
         document.getElementById('error').innerHTML = error.message; // Example: set error message
         console.error('There was an error', error);
       });
-    </script>
-  </body>
-  <style>
-    #card {
-      border: 1px solid #612fff;
-      border-radius: 5px;
-      padding: 5px 10px;
-      width: 400px;
-      box-shadow: #612fff 0px 0px 0px 1px;
-      min-height: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    } catch (error) {
+      document.getElementById('error').style.display = 'block'; // Example: show error
+      document.getElementById('error').innerHTML = error.message; // Example: set error message
+      console.error('There was an error', error);
     }
-  </style>
+
+    // STEP #6a: Add a button handler to trigger the payment request
+    document.getElementById('submit').addEventListener('click', () => {
+      document.getElementById('error').style.display = 'none'; // Example: hide error
+      document.getElementById('submit').innerHTML = 'Processing...'; // Example: set submitting state
+      document.getElementById('submit').disabled = true; // Example: disable button to prevent double submission
+
+      Airwallex.confirmPaymentIntent({
+        element: Airwallex.getElement('card'),
+        id: 'replace-with-your-intent-id',
+        client_secret: 'replace-with-your-client-secret',
+      })
+        .then((response) => {
+          // STEP #6b: Listen to the request response
+          /* Handle confirm response */
+          document.getElementById('success').style.display = 'block'; // Example: show success message
+          document.getElementById('submit').innerHTML = 'Submit'; // Example: reset button state
+          document.getElementById('submit').disabled = false; // Example: reset button state
+          window.alert(JSON.stringify(response));
+        })
+        .catch((response) => {
+          // STEP #6c: Listen to the error response
+          /* Handle error response */
+          document.getElementById('error').style.display = 'block'; // Example: show error message
+          document.getElementById('error').innerHTML = response.message; // Example: fill in error message
+          document.getElementById('submit').innerHTML = 'Submit'; // Example: reset button state
+          document.getElementById('submit').disabled = false; // Example: reset button state
+          console.error(`There was an error, ${JSON.stringify(response)}`);
+        });
+    });
+
+
+  </script>
+</body>
+<style>
+  #card {
+    border: 1px solid #612fff;
+    border-radius: 5px;
+    padding: 5px 10px;
+    width: 400px;
+    box-shadow: #612fff 0px 0px 0px 1px;
+    min-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+</style>
+
 </html>
