--- a/integrations/cdn/dropin.html
+++ b/integrations/cdn/dropin.html
@@ -11,65 +11,61 @@
 
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Airwallex Checkout Playground</title>
-    <!-- 
+
+<head lang="en">
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Airwallex Checkout Playground</title>
+  <!-- 
        STEP #1: Import airwallex-payment-elements bundle 
                - You MUST replace the bundle version to the latest NPM version
                  in order to import the package properly!
      -->
-    <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
-  </head>
-  <body>
-    <h1>DropIn integration</h1>
-    <!-- Example below: loading state when element is not yet mounted -->
-    <p id="loading">Loading...</p>
-    <!-- 
+  <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
+</head>
+
+<body>
+  <h1>DropIn integration</h1>
+  <!-- Example below: loading state when element is not yet mounted -->
+  <p id="loading">Loading...</p>
+  <!-- 
         STEP #3: Add an empty container for the dropIn element to be injected into 
         - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
       -->
-    <div id="dropIn"></div>
-    <!-- Example: Response message containers -->
-    <p id="error"></p>
-    <p id="success">Payment Successful!</p>
-    <script>
-      try {
-        // STEP #2: Initialize the Airwallex global context for event communication
-        Airwallex.init({
-          env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
-          origin: window.location.origin, // Setup your event target to receive the browser events message
-          fonts: [
-            // Customizes the font for the payment elements
-            {
-              src:
-                'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
-              family: 'AxLLCircular',
-              weight: 400,
-            },
-          ],
-        });
+  <div id="dropIn"></div>
+  <!-- Example: Response message containers -->
+  <p id="error"></p>
+  <p id="success">Payment Successful!</p>
+  <script>
+    try {
+      // STEP #2: Initialize the Airwallex global context for event communication
+      Airwallex.init({
+        env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
+        origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
+          },
+        ],
+      });
 
-        // STEP #4: Create 'dropIn' element
-        const dropIn = Airwallex.createElement('dropIn', {
-          // Required, dropIn use intent Id, client_secret and currency to prepare checkout
-          intent_id: 'replace-with-your-intent-id',
-          client_secret: 'replace-with-your-client-secret',
-          currency: 'replace-with-your-intent-currency',
-        });
-        // STEP #5: Mount 'dropIn' element
-        dropIn.mount('dropIn'); // This 'dropIn' id MUST MATCH the id on your empty container created in Step 3
-      } catch (error) {
-        document.getElementById('loading').style.display = 'none'; // Example: hide loading state
-        document.getElementById('error').style.display = 'block'; // Example: show error
-        document.getElementById('error').innerHTML = error.message; // Example: set error message
-        console.error('There was an error', error);
-      }
+      // STEP #4: Create 'dropIn' element
+      const dropIn = Airwallex.createElement('dropIn', {
+        // Required, dropIn use intent Id, client_secret and currency to prepare checkout
+        intent_id: 'replace-with-your-intent-id',
+        client_secret: 'replace-with-your-client-secret',
+        currency: 'replace-with-your-intent-currency',
+      });
+      // STEP #5: Mount 'dropIn' element
+      const domElement = dropIn.mount('dropIn'); // This 'dropIn' id MUST MATCH the id on your empty container created in Step 3
 
       // STEP #6: Add an event listener to handle events when the element is mounted
-      window.addEventListener('onReady', (event) => {
+      domElement.addEventListener('onReady', (event) => {
         /*
            ... Handle event
          */
@@ -79,7 +75,7 @@
       });
 
       // STEP #7: Add an event listener to handle events when the payment is successful.
-      window.addEventListener('onSuccess', (event) => {
+      domElement.addEventListener('onSuccess', (event) => {
         /*
            ... Handle event on success
          */
@@ -88,7 +84,7 @@
       });
 
       // STEP #8: Add an event listener to handle events when the payment has failed.
-      window.addEventListener('onError', (event) => {
+      domElement.addEventListener('onError', (event) => {
         /*
            ... Handle event on error
          */
@@ -97,13 +93,21 @@
         document.getElementById('error').innerHTML = error.message; // Example: set error message
         console.error('There was an error', error);
       });
-    </script>
-  </body>
-  <style>
-    #dropIn {
-      width: 540px;
-      /* Example: to hide element before it is loaded */
-      display: none;
+    } catch (error) {
+      document.getElementById('loading').style.display = 'none'; // Example: hide loading state
+      document.getElementById('error').style.display = 'block'; // Example: show error
+      document.getElementById('error').innerHTML = error.message; // Example: set error message
+      console.error('There was an error', error);
     }
-  </style>
+
+  </script>
+</body>
+<style>
+  #dropIn {
+    width: 540px;
+    /* Example: to hide element before it is loaded */
+    display: none;
+  }
+</style>
+
 </html>
