--- a/integrations/cdn/full-featured-card.html
+++ b/integrations/cdn/full-featured-card.html
@@ -11,66 +11,61 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
 
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Airwallex Checkout Playground</title>
-    <!-- 
+
+<head lang="en">
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Airwallex Checkout Playground</title>
+  <!-- 
       STEP #1: Import airwallex-payment-elements bundle 
               - You MUST replace the bundle version to the latest NPM version
                 in order to import the package properly!
     -->
-    <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
-  </head>
-  <body>
-    <h1>Full Feature Card integration</h1>
-    <!-- Example: loading state when element is not yet mounted -->
-    <p id="loading">Loading...</p>
-    <!-- 
+  <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
+</head>
+
+<body>
+  <h1>Full Feature Card integration</h1>
+  <!-- Example: loading state when element is not yet mounted -->
+  <p id="loading">Loading...</p>
+  <!-- 
       STEP #3: Add an empty container for the full-featured-card element to be injected into 
       - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
     -->
-    <div id="full-featured-card"></div>
-    <!-- Example: Response message containers -->
-    <p id="error"></p>
-    <p id="success">Payment Successful!</p>
-    <script>
-      try {
-        // STEP #2: Initialize the Airwallex global context for event communication
-        Airwallex.init({
-          env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
-          origin: window.location.origin, // Setup your event target to receive the browser events message
-          fonts: [
-            // Customizes the font for the payment elements
-            {
-              src:
-                'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
-              family: 'AxLLCircular',
-              weight: 400,
-            },
-          ],
-        });
-
-        // STEP #4: Create 'fullFeaturedCard' element
-        const element = Airwallex.createElement('fullFeaturedCard', {
-          intent: {
-            // Required, fullFeaturedCard uses intent Id and client_secret to prepare checkout
-            id: 'replace-with-your-intent-id',
-            client_secret: 'replace-with-your-client-secret',
+  <div id="full-featured-card"></div>
+  <!-- Example: Response message containers -->
+  <p id="error"></p>
+  <p id="success">Payment Successful!</p>
+  <script>
+    try {
+      // STEP #2: Initialize the Airwallex global context for event communication
+      Airwallex.init({
+        env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
+        origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
           },
-        });
-        // STEP #5: Mount 'fullFeaturedCard' element
-        element.mount('full-featured-card'); // This 'full-featured-card' id MUST MATCH the id on your empty container created in Step 3
-      } catch (error) {
-        document.getElementById('loading').style.display = 'none'; // Example: hide loading state
-        document.getElementById('error').style.display = 'block'; // Example: show error
-        document.getElementById('error').innerHTML = error.message; // Example: set error message
-        console.error('There was an error', error);
-      }
+        ],
+      });
 
+      // STEP #4: Create 'fullFeaturedCard' element
+      const element = Airwallex.createElement('fullFeaturedCard', {
+        intent: {
+          // Required, fullFeaturedCard uses intent Id and client_secret to prepare checkout
+          id: 'replace-with-your-intent-id',
+          client_secret: 'replace-with-your-client-secret',
+        },
+      });
+      // STEP #5: Mount 'fullFeaturedCard' element
+      const domElement = element.mount('full-featured-card'); // This 'full-featured-card' id MUST MATCH the id on your empty container created in Step 3
       // STEP #6: Add an event listener to handle events when the element is mounted
-      window.addEventListener('onReady', (event) => {
+      domElement.addEventListener('onReady', (event) => {
         /**
          * ... Handle event when element is mounted
          */
@@ -80,7 +75,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
       });
 
       // STEP #7: Add an event listener to handle events when the payment is successful.
-      window.addEventListener('onSuccess', (event) => {
+      domElement.addEventListener('onSuccess', (event) => {
         /*
           ... Handle event on success
         */
@@ -89,7 +84,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
       });
 
       // STEP #8: Add an event listener to handle events when the payment has failed.
-      window.addEventListener('onError', (event) => {
+      domElement.addEventListener('onError', (event) => {
         /*
           ... Handle event on error
         */
@@ -98,13 +93,21 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         document.getElementById('error').innerHTML = error.message; // Example: set error message
         console.error('There was an error', event.detail.error);
       });
-    </script>
-  </body>
-  <style>
-    #full-featured-card {
-      width: 540px;
-      /* Example: hide container when element has not mounted */
-      display: none;
+    } catch (error) {
+      document.getElementById('loading').style.display = 'none'; // Example: hide loading state
+      document.getElementById('error').style.display = 'block'; // Example: show error
+      document.getElementById('error').innerHTML = error.message; // Example: set error message
+      console.error('There was an error', error);
     }
-  </style>
+
+  </script>
+</body>
+<style>
+  #full-featured-card {
+    width: 540px;
+    /* Example: hide container when element has not mounted */
+    display: none;
+  }
+</style>
+
 </html>
