--- a/integrations/cdn/googlepay.html
+++ b/integrations/cdn/googlepay.html
@@ -71,7 +71,20 @@
       });
 
       // STEP #5: Mount googlepay element
-      googlepay.mount('googlepay');
+      const domElement = googlepay.mount('googlepay');
+      // STEP #6: Add an event listener to handle errors
+      domElement.addEventListener('onError', (event) => {
+        const { error } = event.detail;
+        document.getElementById('error').style.display = 'block'; // Example: show error
+        document.getElementById('error').innerHTML = error.message; // Example: set error message
+        console.error('There was an error', error);
+      });
+
+
+      // STEP #7: Add an event listener to handle errors
+      domElement.addEventListener('onSuccess', (event) => {
+        // handle your success event
+      });
     } catch (error) {
       document.getElementById('error').style.display = 'block'; // Example: show error
       document.getElementById('error').innerHTML = error.message; // Example: set error message
@@ -79,20 +92,6 @@
     }
 
 
-
-    // STEP #7: Add an event listener to handle errors
-    window.addEventListener('onError', (event) => {
-      const { error } = event.detail;
-      document.getElementById('error').style.display = 'block'; // Example: show error
-      document.getElementById('error').innerHTML = error.message; // Example: set error message
-      console.error('There was an error', error);
-    });
-
-
-    // STEP #8: Add an event listener to handle errors
-    window.addEventListener('onSuccess', (event) => {
-      // handle your success event
-    });
   </script>
 </body>
 
