--- a/integrations/cdn/redirect.html
+++ b/integrations/cdn/redirect.html
@@ -11,63 +11,59 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
 
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Airwallex Checkout Playground</title>
-    <!-- 
+
+<head lang="en">
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Airwallex Checkout Playground</title>
+  <!-- 
       STEP #1: Import airwallex-payment-elements bundle 
               - You MUST replace the bundle version to the latest NPM version
                 in order to import the package properly!
     -->
-    <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
-  </head>
-  <body>
-    <h1>Redirect integration</h1>
-    <!-- 
+  <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
+</head>
+
+<body>
+  <h1>Redirect integration</h1>
+  <!-- 
       STEP #3: Add an empty container for the redirect element to be injected into 
       - Ensure this is the only element in your document with this id, otherwise the element may fail to mount.
     -->
-    <div id="redirect"></div>
-    <!-- Example: Response message containers -->
-    <p id="error"></p>
-    <script>
-      try {
-        // STEP #2: Initialize the Airwallex global context for event communication
-        Airwallex.init({
-          env: 'staging', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
-          origin: window.location.origin, // Setup your event target to receive the browser events message
-          fonts: [
-            // Customizes the font for the payment elements
-            {
-              src:
-                'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
-              family: 'AxLLCircular',
-              weight: 400,
-            },
-          ],
-        });
-        // STEP #4: Create 'redirect' element
-        const element = Airwallex.createElement('redirect', {
-          intent: {
-            // Required, redirect element uses intent Id and client_secret to prepare checkout
-            id: 'replace-with-your-intent-id',
-            client_secret: 'replace-with-your-client-secret',
+  <div id="redirect"></div>
+  <!-- Example: Response message containers -->
+  <p id="error"></p>
+  <script>
+    try {
+      // STEP #2: Initialize the Airwallex global context for event communication
+      Airwallex.init({
+        env: 'staging', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
+        origin: window.location.origin, // Setup your event target to receive the browser events message
+        fonts: [
+          // Customizes the font for the payment elements
+          {
+            src:
+              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+            family: 'AxLLCircular',
+            weight: 400,
           },
-          method: 'replace-with-your-redirect-method', // Required, must provide payment method type
-        });
+        ],
+      });
+      // STEP #4: Create 'redirect' element
+      const element = Airwallex.createElement('redirect', {
+        intent: {
+          // Required, redirect element uses intent Id and client_secret to prepare checkout
+          id: 'replace-with-your-intent-id',
+          client_secret: 'replace-with-your-client-secret',
+        },
+        method: 'replace-with-your-redirect-method', // Required, must provide payment method type
+      });
 
-        // STEP #5: Mount 'redirect' element
-        element.mount('redirect'); // This 'redirect' id MUST MATCH the id on your empty container created in Step 3
-      } catch (error) {
-        document.getElementById('error').style.display = 'block'; // Example: show error
-        document.getElementById('error').innerHTML = error.message; // Example: set error message
-        console.error('There was an error', error);
-      }
-
+      // STEP #5: Mount 'redirect' element
+      const domElement = element.mount('redirect'); // This 'redirect' id MUST MATCH the id on your empty container created in Step 3
       // STEP #6: Add an event listener to handle events when the element is mounted
-      window.addEventListener('onReady', (event) => {
+      domElement.addEventListener('onReady', (event) => {
         /*
           ... Handle event
         */
@@ -75,7 +71,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
       });
 
       // STEP #7: Add an event listener to handle events when the payment has failed.
-      window.addEventListener('onError', (event) => {
+      domElement.addEventListener('onError', (event) => {
         /*
           ... Handle event on error
         */
@@ -84,11 +80,19 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         document.getElementById('error').innerHTML = error.message; // Example: set error message
         console.error('There was an error', event.detail.error);
       });
-    </script>
-  </body>
-  <style>
-    #redirect {
-      width: 540px;
+    } catch (error) {
+      document.getElementById('error').style.display = 'block'; // Example: show error
+      document.getElementById('error').innerHTML = error.message; // Example: set error message
+      console.error('There was an error', error);
     }
-  </style>
+
+
+  </script>
+</body>
+<style>
+  #redirect {
+    width: 540px;
+  }
+</style>
+
 </html>
